--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="styles.css" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" href="nivo-slider.css" type="text/css" media="screen" />
+<!--link rel="stylesheet" href="nivo-slider.css" type="text/css" media="screen" /-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <div id="bg">
@@ -15,15 +17,49 @@
 <div id="main">
 <!-- header begins -->
 <div id="header">	
-	
-	<div id="slider-wrapper">        
-					             <div id="slider" class="nivoSlider">
-									<img src="images/header.jpg" alt="" title="" />
-									<img src="images/header2.jpg" alt="" title="" />
-									<img src="images/header3.jpg" alt="" title="" />
-									<img src="images/header4.jpg" alt="" title="" />									
-								</div>        
-				            </div>
+	<!-- Carousel -->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+  <!-- Indicators/dots -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+  </div>
+  
+  <!-- The slideshow/carousel -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="images/header.jpg" alt="Los Angeles" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="images/header2.jpg" alt="Chicago" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="images/header3.jpg" alt="New York" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="images/header4.jpg" alt="New York" class="d-block" style="width:100%">
+    </div>
+  </div>
+  
+  <!-- Left and right controls/icons -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+	<!--div id="slider-wrapper">        
+		 <div id="slider" class="nivoSlider ">
+					<img src="images/header.jpg" alt="" title="" />
+					<img src="images/header2.jpg" alt="" title="" />
+					<img src="images/header3.jpg" alt="" title="" />
+					<img src="images/header4.jpg" alt="" title="" />									
+			</div>        
+	 </div>
 								
 <script type="text/javascript" src="lib/jquery-1.4.3.min.js"></script>
     <script type="text/javascript" src="lib/jquery.nivo.slider.pack.js"></script>
@@ -32,7 +68,7 @@
         $('#slider').nivoSlider();
     });
     </script>
-	
+	-->
 </div>
         <div id="buttons">
 		<ul>
